feat(notion): Update ShowPlanningAiService to include detailed high heat rule descriptions in prompts